--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,5 @@
-Django==1.8.7
-wheel==0.24.0
+django==1.8.1
 django-allauth==0.22.0
+django-uuidfield  # you don't have to use uuids, but I choose to.
+django-bootstrap3  # allauth doesn't require this but again I chose to.
+
